fix height on mobile

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -861,7 +861,7 @@ a#result-button {
   }
 
   #editor-container {
-    height: calc(100% - var(--toolbar-height) * 2);
+    height: calc(100% - (var(--toolbar-height) * 2) + var(--s4));
   }
 
   #modal {
